Change file title

--- a/CustomerChurnPrediction.ipynb
+++ b/CustomerChurnPrediction.ipynb
@@ -13,7 +13,7 @@
    },
    "outputs": [],
    "source": [
-    "# Customer Churn Analysis Dashboard (Voila with Logistic Regression)\n",
+    "# Customer Churn Analysis/Prediction\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
